补充留言 回复 等接口信息

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -7,5 +7,7 @@ wx.appsecret=957c31f74e1ece893d585baa9e02e182
 weburi=http\://nc.mrshare.cn/v1
 errorpage=http\://nc.mrshare.cn/error.jsp
 webbase=http\://nc.mrshare.cn/
+jwh_headimg=http\://img0.imgtn.bdimg.com/it/u\=4063706387,3476503991&fm\=21&gp\=0.jpg
+jwh_name=\u5C45\u59D4\u4F1A
 
  
