--- a/pom.xml
+++ b/pom.xml
@@ -256,7 +256,12 @@
 		<dependency>
 		  <groupId>com.github.liyiorg</groupId>
 		  <artifactId>weixin-popular</artifactId>
-		  <version>2.8.0</version>
+		  <version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.0-b01</version>
 		</dependency>
 	</dependencies>
 	<properties>
