--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.error.layout.ConversionPattern=[%-5p][%-22d{yyyy/MM/dd HH\:mm\:ss
 log4j.appender.error.datePattern='.'yyyy-MM-dd 
 log4j.appender.error.Threshold = ERROR  
 log4j.appender.error.append=true 
-log4j.appender.error.File=logs/error.log
+log4j.appender.error.File=/tmp/logs/error.log
